force-app/main/default/objects/recTypesBenOwner__c/recTypesBenOwner__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Record Types - Beneficial Owner</label>
</CustomObject>