force-app/main/default/objects/recTypesBenOwner__c/fields/Individual__c.field-meta.xml
<CustomField>
    <fullName>Individual__c</fullName>
    <label>Individual</label>
    <length>18</length>
    <type>Text</type>
</CustomField>