force-app/main/default/objects/recTypesBenOwner__c/fields/Trust__c.field-meta.xml
<CustomField>
    <fullName>Trust__c</fullName>
    <label>Trust</label>
    <length>18</length>
    <type>Text</type>
</CustomField>